# ssh_demo

./: .env  Cargo.toml  README.md  s.sql  writing
migrations/: 001_init.sql  init.sql  postgres.sh  redis.sh
src/: lib.rs  s.sql
src/aa/: run.rs
src/db/: mod.rs  pool.rs  server.rs  servergroup.rs
src/domain/: cron_job.rs  cron_log.rs  mod.rs  scheduler.rs  server.rs  servergroup.rs  ssh_configuration.rs
src/handler/: cron_job.rs  cron_log.rs  mod.rs  notfound.rs  server.rs  servergroup.rs  ssh.rs
src/model/: http.rs  mod.rs  server.rs  servergroup.rs  ssh.rs
src/repository/: cron_job.rs  cron_log.rs  mod.rs  server.rs  servergroup.rs  ssh.rs
src/scheduler/: mod.rs  prepare.rs  run.rs
src/script/: acquire_job.lua
src/utils/: crypto.rs
