[package]
name = "connect_ok"
version = "0.1.0"
edition = "2024"

[lib]
name = "connect_ok"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "simple_worker"
path = "src/bin/simple_worker.rs"

[[bin]]
name = "test_worker"
path = "src/bin/test_worker.rs"




[dependencies]
anyhow = "1.0.100"
tokio = {version ="1.48.0",features = ["full"] }
russh = "0.55.0"
actix-web = "4.12.1"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["postgres","runtime-tokio-rustls","macros","chrono"]}
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
serde_json = "1.0.145"
aes-gcm = "0.10.3"
hex = "0.4.3"
log = "0.4.29"
actix-cors = "0.7.1"
tokio-stream = { version = "0.1.18", features = ["full"] }
bytes = "1.11.0"
tokio-cron-scheduler = "0.15.1"
uuid = "1.19.0"
cron-parser = "0.11.2"
redis = { version = "0.27.6", features = ["tokio-comp", "connection-manager"] }
